--- a/TDResume/MyInfo.plist
+++ b/TDResume/MyInfo.plist
@@ -93,7 +93,7 @@
 		</dict>
 		<dict>
 			<key>duration</key>
-			<string>Nov 2013 – Present</string>
+			<string>Jan 2007 - Jul 2008</string>
 			<key>job</key>
 			<string>Computer Technician @ BoB Cyber LAN</string>
 			<key>description</key>
@@ -101,11 +101,12 @@
 		</dict>
 		<dict>
 			<key>duration</key>
-			<string>Nov 2013 – Present</string>
+			<string>Jan 2006 - Jan 2007</string>
 			<key>job</key>
 			<string>Computer Technician @ SES - RS</string>
 			<key>description</key>
-			<string>Identified and solved problems regarding to software or hardware issues.|Provided preventive maintenance (i.e., network monitoring, anti-virus/spyware installation) tomitigate computer issues.|Instructed coworkers on the use of the Internet.</string>
+			<string>Identified and solved problems regarding to software or hardware issues.|Provided preventive maintenance (i.e., network monitoring, anti-virus/spyware installation) to
+mitigate computer issues.|Instructed coworkers on the use of the Internet.</string>
 		</dict>
 	</array>
 </dict>
